--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,41 @@
+body {
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  background-image:url(https://i.imgur.com/jUj0HNf.jpg?1);
+}
+
+h1 {
+  line-height: 1.8em;
+}
+h3 {
+  line-height: 2em;
+}
+
 #content {
   margin-top: 20vh;
 }
 
-
 .cardTitle {
-  line-height:2em;
+  line-height:200%;
   width:100%;
   background:#61a8a5;
+}
+
+@media (min-width: 576px) {
+  .cardTitle {
+    margin-top:70vh;
+  }
+}
+
+@media (min-width: 768px) {
+  .cardTitle {
+    margin-top:6vh;
+  }
+}
+
+@media (min-width: 992px) {
+  .cardTitle {
+    margin-top:17vh;
+  }
 }
 
 .cardOverlay {
